--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="location_dont_found">Not Found…</string>
+    <string name="error_unexpected">Error.</string>
+
 </resources>
