--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -2,5 +2,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="location_dont_found">Not Found…</string>
     <string name="error_unexpected">Error.</string>
-
+    <string name="open_image">Open Image</string>
+    <string name="close">Close</string>
+    <string name="unknown_error_title">An error occurred</string>
+    <string name="unknown_error_text">An unexpected error occurred.</string>
+    <string name="no_internet_title">There is no internet network</string>
+    <string name="no_internet_error_text">Your device has no or very weak internet connection</string>
 </resources>
